<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setupRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_bg"
    android:fitsSystemWindows="false">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/setupScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/setupScrollContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxWidth="@dimen/setup_content_max_width"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/screen_horizontal_padding"
            android:paddingTop="@dimen/setup_top_padding"
            android:paddingBottom="@dimen/setup_bottom_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.VpnAdmin.Headline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:layout_marginBottom="@dimen/spacing_lg"
                android:text="@string/setup_subtitle"
                android:textAppearance="@style/TextAppearance.VpnAdmin.BodyMuted" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/panel_url_hint"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/urlInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    android:minHeight="@dimen/touch_target_min"
                    android:textAppearance="@style/TextAppearance.VpnAdmin.Input" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.VpnAdmin.PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:minHeight="@dimen/touch_target_min"
                android:text="@string/save_and_open" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="center"
                android:text="@string/setup_pixel_hint"
                android:textAppearance="@style/TextAppearance.VpnAdmin.Caption" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
